--- a/project_2/README
+++ b/project_2/README
@@ -1,1 +1,7 @@
-README
+Mehar Nallamalli, Chaitanya Pedada
+804769644, 404729909
+
+
+Chai worked on client side and retransmission.
+Mehar worked on server side implementation and report and slides. 
+
